[gd_scene load_steps=17 format=3 uid="uid://by1crim7ct5b3"]

[ext_resource type="Script" path="res://Scripts/Characters/NPC.gd" id="1_0vlo8"]
[ext_resource type="Texture2D" uid="uid://jefbb2bqvquu" path="res://Assets/Sunny Land Collection Files/Packs/Characters/sunny-froggy/Sprites/taunting/_0000_Layer-1.png" id="2_51xda"]
[ext_resource type="Texture2D" uid="uid://2y5sgkwd7ym" path="res://Assets/Sunny Land Collection Files/Packs/Characters/sunny-froggy/Sprites/taunting/_0001_Layer-2.png" id="3_m76s7"]
[ext_resource type="Texture2D" uid="uid://4n5q6k2i2bum" path="res://Assets/Sunny Land Collection Files/Packs/Characters/sunny-froggy/Sprites/taunting/_0002_Layer-3.png" id="4_p2jej"]
[ext_resource type="Texture2D" uid="uid://bmrj2il5ldovi" path="res://Assets/Sunny Land Collection Files/Packs/Characters/sunny-froggy/Sprites/taunting/_0003_Layer-4.png" id="5_uh4fo"]
[ext_resource type="AudioStream" uid="uid://dhpm23d8vg3l3" path="res://Audio/GiveItemAudio.mp3" id="6_6srw3"]
[ext_resource type="Texture2D" uid="uid://dncjj1kbcu746" path="res://Assets/Sunny Land Collection Files/Packs/Packs/Sunnyland/sprites/cherry/cherry-1.png" id="6_qj2cg"]
[ext_resource type="Texture2D" uid="uid://5yk3oqcntpe0" path="res://Assets/Sunny Land Collection Files/Packs/Packs/Sunnyland/sprites/gem/gem-1.png" id="7_qo20b"]
[ext_resource type="Texture2D" uid="uid://gm8xv8e2yxuy" path="res://Assets/Sunny Land Collection Files/Packs/Packs/Sunnyland/environment/Props/crate.png" id="8_peq10"]
[ext_resource type="Texture2D" uid="uid://ifl6k6bsnrex" path="res://Assets/Sunny Land Collection Files/Packs/Packs/Sunnyland/sprites/frog/idle/frog-idle-1.png" id="9_itoff"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oeje6"]
radius = 19.0
height = 44.0

[sub_resource type="SpriteFrames" id="SpriteFrames_gbd0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_51xda")
}, {
"duration": 1.0,
"texture": ExtResource("3_m76s7")
}, {
"duration": 1.0,
"texture": ExtResource("4_p2jej")
}, {
"duration": 1.0,
"texture": ExtResource("5_uh4fo")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vgbnm"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 1, 1, 1, 2, 2, 2, 3, 3, 3]
}

[sub_resource type="Animation" id="Animation_5lu7p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8f8uk"]
_data = {
"Idle": SubResource("Animation_vgbnm"),
"RESET": SubResource("Animation_5lu7p")
}

[sub_resource type="Curve" id="Curve_0kvq2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.99536, 0.0697981), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Froggy" type="Area2D"]
script = ExtResource("1_0vlo8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_oeje6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gbd0r")
animation = &"Idle"
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8f8uk")
}
autoplay = "Idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = -50.0
offset_right = 15.0
offset_bottom = -20.0
grow_horizontal = 2

[node name="Cherry" type="Sprite2D" parent="PanelContainer"]
visible = false
position = Vector2(18, 15)
texture = ExtResource("6_qj2cg")

[node name="Gem" type="Sprite2D" parent="PanelContainer"]
visible = false
position = Vector2(15, 15)
texture = ExtResource("7_qo20b")

[node name="Box" type="Sprite2D" parent="PanelContainer"]
visible = false
position = Vector2(15, 15)
texture = ExtResource("8_peq10")

[node name="Frog" type="Sprite2D" parent="PanelContainer"]
visible = false
position = Vector2(15, 15)
texture = ExtResource("9_itoff")

[node name="Sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6srw3")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_0kvq2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
